# insert-itunes-collector

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  edit_runner_config.py  pyproject.toml  runner.py
.github/workflows/: cd_prod.yaml  cd_staging.yaml  ci.yaml  cs.yaml
app/: concurrency_task.py  main.py
app/collector/: db_sync.py  itunes_collection_handler.py  itunes_tag_handler.py
app/common/: collection.py  comparsion.py  exceptions.py  inspect.py
app/crawler/: __init__.py  exceptions.py  feed_handler.py  header.py  itunes_api.py  request_handler.py  wrapper.py
app/db/: deco.py  formatter.py  limitation.py  operations.py  utils.py
app/feed_parser/: field_method.py  formatter.py  helper.py  parser.py
config/: constants.py  loader.py
core/aws/: secret_api.py  session.py
core/cache/: client.py  conn.py  deco.py  exceptions.py
core/common/: dt.py  file_lock.py  fs_utils.py  string.py  type_checker.py
core/conf/: __init__.py  execution.py  globe_setting.py  helper.py  setting.py
core/db/: __init__.py  cursor_wrapper.py  dao.py  manager.py  transaction.py  utils.py
core/decorators/: __init__.py  asyncio.py  restrict.py
core/utils/: exceptions.py  lazy.py  singleton.py
execution/: local.setting.json  prod.setting.json  staging.setting.json
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
k8s/common/: debug-pod.yaml
k8s/init/: create-exclusion-list.yaml  (+4 more)
log_helper/: __init__.py  async_logger.py  aws_handler.py  json_formatter.py  utils.py
settings/: local.py  prod.py  staging.py
(+1 files in other folders)
