[project]
name = "itunes-insert-collector"
version = "0.1.0"
description = ""
authors = [
    { name = "Jack Huang", email = "jackhuang@babbao.com" }
]
readme = "README.md"
requires-python = "<=3.9.12"
dependencies = [
    "aws-requests-auth (==0.4.1)",
    "boto3 (==1.11.10)",
    "botocore (==1.14.17)",
    "certifi (==2021.10.8)",
    "charset-normalizer (==2.0.9)",
    "docutils (==0.15.2)",
    "elasticsearch (==6.3.0)",
    "feedparser (==6.0.0)",
    "future (==0.18.2)",
    "idna (==3.3)",
    "jmespath (==0.9.5)",
    "mutagen (==1.41.1)",
    "psycopg2 (==2.9.9)",
    "python-dateutil (==2.5.3)",
    "pytz (==2019.3)",
    "redis (==2.10.6)",
    "requests (==2.26.0)",
    "requests-aws4auth (==0.9)",
    "s3transfer (==0.3.7)",
    "sgmllib3k (==1.0.0)",
    "six (==1.14.0)",
    "urllib3 (==1.25.8)",
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.9.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "24.2.0"
isort = "5.13.2"
mypy = "^1.15.0"
ruff = "^0.9.6"
pylint = "^3.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = ["import-untyped", "var-annotated", "attr-defined", "misc"]

[tool.ruff]
target-version = "py39"
